opam-version: "2.0"
maintainer: "emarzion@gmail.com"
version: "dev"

homepage: "https://github.com/emarzion/coqtbgen"
dev-repo: "git+https://github.com/emarzion/coqtbgen.git"
bug-reports: "https://github.com/emarzion/coqtbgen/issues"
license: "GPL"

synopsis: "Games library and Tablebase generator"

build: [
  [dune build]
]
install: [dune install]

depends: [
  "ocaml" {>= "4.14.0"}
  "coq" {>= "8.15.2"}
  "js_of_ocaml" {>= "5.4.0"}
  "js_of_ocaml-lwt" {>= "5.4.0"}
  "js_of_ocaml-ppx" {>= "5.4.0"}
  "js_of_ocaml-tyxml" {>= "5.4.0"}
  "games"
]

authors: [
  "Evan Marzion"
]

pin-depends: [
  ["games.dev" "git+https://github.com/emarzion/games.git#34923d2e23d72365fb7fb1b00725881431aea165"]
]