opam-version: "2.0"
maintainer: "emarzion@gmail.com"
version: "dev"

homepage: "https://github.com/emarzion/games"
dev-repo: "git+https://github.com/emarzion/games.git"
bug-reports: "https://github.com/emarzion/games/issues"
license: "GPL"

synopsis: "Games library"

build: [
  ["./configure.sh"]
  [make "-j%{jobs}%"]
]
install: [make "install"]

depends: [
  "ocaml" {= "4.14.0"}
  "coq" {(= "8.15.2")}
  "coq-equations" {>= "1.3"}
]

authors: [
  "Evan Marzion"
]
